--- a/src/app/template/layout/layout.component.html
+++ b/src/app/template/layout/layout.component.html
@@ -1,7 +1,7 @@
 <header class="bg-gradient-to-t from-blue-500 to-blue-700 text-white p-6 shadow-lg">
     <div class="text-center">
-        <h1 class="text-3x1 font-bold">Titulo</h1>
-        <p class="text-lg mt-2">Subtitulo</p>
+        <h1 class="text-3x1 font-bold">{{ props.titulo }}</h1>
+        <p class="text-lg mt-2">{{ props.subtitulo }}</p>
     </div>
     <div class="mt-4">
         <hr class="border-t border-blue-300 opacity-50" />
