--- a/src/app/template/layout/layout.component.html
+++ b/src/app/template/layout/layout.component.html
@@ -11,7 +11,7 @@
             <li><a routerLink="/paginas/galeria" class="hover:text-yellow-300">Galeria</a></li>
             <li><a routerLink="/paginas/categorias" class="hover:text-yellow-300">Categorias</a></li>
             <li><a routerLink="/paginas/lugares" class="hover:text-yellow-300">Lugares</a></li>
-            <li><a routerLink="/paginas" class="hover:text-yellow-300">Sair</a></li>
+            <li><a routerLink="/paginas" (click)="logout()" class="hover:text-yellow-300">Sair</a></li>
         </ul>
     </nav>
 </header>
